--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ react-native
 WhopReactNativeKit-Debug.xcframework.zip
 WhopReactNativeKit-Release.xcframework.zip
 hermes.xcframework.zip
+hermes.xcframework
