--- a/WhopReactNativeKit/Podfile
+++ b/WhopReactNativeKit/Podfile
@@ -92,7 +92,11 @@ target 'WhopReactNativeKit' do
 
     targets_to_skip_verification = [
       'Yoga',
-      'YogaKit'
+      'YogaKit',
+      "NitroModules",
+      "ReactNativeVideo",
+      "react_native_video",
+      "react-native-video"
     ]
     
     installer.pods_project.targets.each do |target|
@@ -114,13 +118,29 @@ target 'WhopReactNativeKit' do
 
         if targets_to_skip_verification.include?(target.name)
           target.build_configurations.each do |config|
-            puts "Updating OTHER_SWIFT_FLAGS for target #{target.name} to include -no-verify-emitted-module-interface"
+            puts "Updating OTHER_SWIFT_FLAGS for target #{target.name} (#{config.name}) to include -no-verify-emitted-module-interface"
   
             # It's very important that the "$(inherited)" part is added, otherwise this will
             # overwrite all other flags and cause a whole separate set of issues
             config.build_settings['OTHER_SWIFT_FLAGS'] = '$(inherited) -no-verify-emitted-module-interface'
           end
         end
+      end
+    end
+
+    
+    installer.pods_project.targets.each do |t|
+      puts "t.name: #{t.name}"
+
+      next unless t.name == 'NitroModules' || t.name == 'ReactNativeVideo' || t.name == 'react_native_video' || t.name == 'react-native-video'
+  
+      t.build_configurations.each do |c|
+
+        puts "DISABLE x86_64; DISABLE BUILD_LIBRARY_FOR_DISTRIBUTION; for #{t.name} and config #{c.name}"
+        # We’re not shipping NitroModules as a stand-alone binary, so we don’t
+        # need .swiftinterface verification or the x86_64 slice.
+        c.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
+        c.build_settings['EXCLUDED_ARCHS'] = 'x86_64'
       end
     end
   end
